# ipympl

./: .buildinfo  .eslintignore  .eslintrc.js  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  RELEASE.md  babel.config.js  contributing.html  dev-environment.yml  environment.yml  garbo.py  genindex.html  index.html  installing.html  jupyter-matplotlib.json  objects.inv  package.json  postBuild  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.cfg  setup.py  test_programmatic_download.py  tsconfig.eslint.json  tsconfig.json  webpack.config.js
.binder/: environment.yml  postBuild
.github/: TEST_FAIL_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: binder-on-pr.yml  codeql.yml  docs.yml  main.yml  mpl-latest.yml  release.yml  reviewdog.yml  update_galata_references.yaml
.nblink/: environment.yml  nblink-lock.json
_images/: basic.apng
_sources/: contributing.md  index.ipynb  installing.md
_sources/examples/: full-example.ipynb
_static/: documentation_options.js
css/: mpl_widget.css
docs/: Makefile  conf.py  contributing.md  index.ipynb  installing.md
docs/_static/: custom.css
docs/examples/: full-example.ipynb
examples/: advanced.ipynb  full-example.html  header_visible.ipynb  ipympl.ipynb
ipympl/: __init__.py  __init__.py.orig  __init___LOCAL_98333.py  _version.py  backend_nbagg.py
ipympl/nbextension/: extension.js
js/: .eslintrc.js  .prettierrc  README.md  package-lock.json  package.json  webpack.config.js
js/src/: embed.js  extension.js  index.js  lab_extension.js  lab_extension.ts  labplugin.js  mpl.js  mpl_widget.css  mpl_widget.js  nb_extension.js  nb_extension.ts  nb_index.js  toolbar_widget.js  utils.js  utils.ts
src/: extension.ts  index.ts  mpl_widget.ts  plugin.ts  toolbar_widget.ts  utils.ts  version.ts
test-notebooks/: UAT.ipynb
tests/: manual_test_rcparams_save.ipynb  test_download.py  test_entry_points.py
ui-tests/: README.md  jupyter_server_config.py  package.json  tsconfig.json
ui-tests/tests/: ipympl.test.ts
ui-tests/tests/notebooks/: ipympl.ipynb  ipympl_update.ipynb
